# broadcastify-calls

./: .gitignore  AGENTS.md  API.md  LICENSE  README.md  TODO.md  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  manual-publish.yml  release.yml
docs/: RELEASING.md
examples/: archivecalls.php.json  live-calls.json  live.html  live.js  squelch-example.aac
src/broadcastify_calls.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/broadcastify_client/: __init__.py  archives.py  audio_consumer.py  audio_downloader_http.py  audio_preprocess.py  audio_processing.py  audio_processing_pyav.py  audio_segmentation.py  auth.py  cache.py  cli.py  client.py  config.py  errors.py  eventbus.py  http.py  live_producer.py  metadata.py  models.py  schemas.py  telemetry.py  transcription.py  transcription_local.py  transcription_openai.py
src/broadcastify_client/ui/: renderer.py  runtime.py  telemetry_sink.py  view_model.py
tests/: __init__.py  test_audio_processing_pyav.py  test_audio_segmentation.py  test_cli.py  test_client.py  test_config.py  test_transcription_local.py  test_transcription_openai.py  test_ui_runtime.py
